<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notification_message">"Click to run"</string>
    <string name="accessibility_service_label">"FakeStandby Service"</string>
    <string name="accessibility_service_description">"FakeStandby requires this functionality to make it possible to control every screen and every app. This feature will only used to provide the functionality of the app and will not access, save, collect or share any data."</string>
    <string name="accessibility_error_not_running_title">"Required service not running"</string>
    <string name="accessibility_error_not_running_message">"A required service for FakeStandby is not running. Please restart your device."</string>
    <string name="accessibility_error_settings_label">"Open Settings"</string>
    <string name="accessibility_error_no_overlay_permission_title">"Permission required"</string>
    <string name="accessibility_error_no_overlay_permission_message">"This app is not permitted to display overlays over other apps. To run this app, you need to grant the \\"Display over other apps\\" permission for FakeStandby. This permission makes it possible for this app to display content over the content of other apps. To grant this permission, enable the switch on the following screen."</string>
    <string name="notification_channel_errors_name">"Errors and warnings"</string>
    <string name="accessibility_error_not_enabled_title">"Some functionality is not enabled"</string>
    <string name="accessibility_error_not_enabled_message">"FakeStandby is not enabled in you device's accessibility settings. To run this app, that service has to be enabled. Simply open the accessibility settings, scroll down to FakeStandby and enable it. On some devices you may look for the option under \\"installed services\\""</string>
    <string name="title_activity_settings">"Settings"</string>
    <string name="settings_category_overlay_options">"Fake standby options"</string>
    <string name="close_option_title">"Escape methods"</string>
    <string name="close_option_tap_four">"Tap the screen with 4 or more simultaneous touches"</string>
    <string name="close_option_swipe">"Swipe from bottom to top"</string>
    <string name="close_option_summary">"Choose the methods that can be used to escape the fake standby state"</string>
    <string name="close_option_error_no_option_selected_title">"No close method set"</string>
    <string name="close_option_error_no_option_selected_description">"No close method set for the fake standby"</string>
    <string name="settings_category_others">"Further information"</string>
    <string name="help_translate_title">"Help translate this app"</string>
    <string name="help_translate_summary">"If this app is not currently available in your native language, you can help translate it to allow it to go around the world!"</string>
    <string name="app_name">"FakeStandby"</string>
    <string name="visit_website_title">"Visit the project website"</string>
    <string name="visit_website_summary" translatable="false">"fakestandby.jonasbernard.de"</string>
    <string name="license_activity_title">"GNU General Public License 3.0"</string>
    <string name="license_title">"License"</string>
    <string name="license_summary">"See the licensing information."</string>
    <string name="view_source_title">"View source code"</string>
    <string name="view_source_summary">"Visit GitHub to see all the source code."</string>
    <string name="settings_show_notification_title">"Always show a notification to start the fake standby"</string>
    <string name="settings_show_notification_summary">"Use this option if your device does not support custom Quick Settings tiles."</string>
    <string name="setting_start_on_boot_title">"Start fake standby on boot"</string>
    <string name="setting_start_on_boot_summary">"When enabled, the fake standby will begin as soon as the accessibility service is started. For example, after boot."</string>
    <string name="notification_default_channel_name">"Main"</string>
    <string name="notification_default_channel_description">"Main channel for the compatibility notification"</string>
    <string name="open_accessibility_settings_title">"Open accessibility settings"</string>
    <string name="open_accessibility_settings_description">"Open the device's accessibility settings to manage the accessibility service for FakeStandby."</string>
    <string name="settings_category_open_other">"Open other settings"</string>
    <string name="action_start_overlay">"Start FakeStandby"</string>
    <string name="action_stop_overlay">"Stop FakeStandby"</string>
    <string name="setting_invert_overlay_color_title">Invert color</string>
    <string name="setting_invert_overlay_color_summary">Enable this if the FakeStandby appears in white due to dark mode.</string>
    <string name="setting_start_secure_mode_title">Secure mode</string>
    <string name="setting_start_secure_mode_summary">If enabled, the FakeStandby will deactivate itself after 15 seconds after is has been started. This is to test if the app works on your phone and to prevent that you accidentally lock yourself out of your phone. Set this switch to off as soon as you have verified that you can turn off the FakeStandby after starting it.</string>
</resources>
