<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="overlay_category"
        app:title="@string/settings_category_overlay_options">

        <MultiSelectListPreference
            app:defaultValue="@array/close_options_values"
            app:entries="@array/close_options_entries"
            app:entryValues="@array/close_options_values"
            app:key="setting_close_options"
            app:title="@string/close_option_title"
            app:summary="@string/close_option_summary" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="setting_show_notification"
            app:title="@string/settings_show_notification_title"
            app:summary="@string/settings_show_notification_summary" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="setting_use_wake_lock"
            app:title="@string/settings_use_wake_lock_title"
            app:summary="@string/settings_use_wake_lock_summary" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="setting_start_on_boot"
            app:title="@string/setting_start_on_boot_title"
            app:summary="@string/setting_start_on_boot_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="open_settings_category"
        app:title="@string/settings_category_open_other">

        <Preference
            app:title="@string/open_accessibility_settings_title"
            app:summary="@string/open_accessibility_settings_description"
            app:icon="@drawable/ic_baseline_open_in_new_24">
            <intent android:action="android.settings.ACCESSIBILITY_SETTINGS"
                android:launchMode="singleTask" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="other_category"
        app:title="@string/settings_category_others">

        <Preference
            app:title="@string/visit_website_title"
            app:summary="@string/visit_website_summary"
            app:icon="@drawable/ic_baseline_public_24">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://jonasbernard.github.io/FakeStandby/" />
        </Preference>

        <Preference
            app:title="@string/help_translate_title"
            app:summary="@string/help_translate_summary"
            app:icon="@drawable/ic_baseline_translate_24">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://poeditor.com/join/project/WkxMBheCVb" />
        </Preference>

        <Preference
            app:title="@string/view_source_title"
            app:summary="@string/view_source_summary"
            app:icon="@drawable/ic_baseline_code_24">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/JonasBernard/FakeStandby/" />
        </Preference>

        <Preference
            app:title="@string/license_title"
            app:summary="@string/license_summary"
            app:icon="@drawable/ic_baseline_copyright_24">
            <intent android:action="android.jonas.fakestandby.license" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
